cleanup, add a bit of mcelreath content

--- a/from_ea_market_testing/binary_trial_computations_redacted_ed.qmd
+++ b/from_ea_market_testing/binary_trial_computations_redacted_ed.qmd
@@ -1,4 +1,4 @@
-# Inference/equivalence testing w. binomial outcomes
+# Inference/equivalence tests, (binomial) {#inference_binom_example}
 
 ```{r}
 #| include: false
