--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,10 @@
 # Introduction/overview
 
+```{r}
+options(knitr.duplicate.label = "allow")
+
+```
+
 A set of curated resources tied to use-cases, and a space to organize our discussion
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
